feat: student name step page

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@use-funnel/browser": "^0.0.7",
+    "@use-funnel/next": "^0.0.8",
+    "@use-funnel/react-navigation-native": "^0.0.7",
+    "@use-funnel/react-router-dom": "^0.0.7",
     "axios": "^1.7.7",
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.11",
