--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.11",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
