--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.7.7",
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.11",
+    "open-color": "^1.9.1",
+    "pretendard": "^1.3.9",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
