--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@use-funnel/next": "^0.0.8",
     "@use-funnel/react-navigation-native": "^0.0.7",
     "@use-funnel/react-router-dom": "^0.0.7",
+    "amplitude": "^6.0.0",
+    "amplitude-js": "^8.21.9",
     "axios": "^1.7.7",
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.11",
